--- a/trackify/webapp/static/css/home.css
+++ b/trackify/webapp/static/css/home.css
@@ -35,17 +35,27 @@ div.top_artists {
 
 .top_tracks_and_play_counter_container {
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: row nowrap;
     justify-content: space-around;
-    height: 400px;
+    min-height: 500px;
+}
+
+.top_tracks {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    margin-right: 20px;
+    margin-left: 20px;
 }
 
 .top_track {
     border: 1px solid #111111;
     background-color: #222222;
-    margin-top: 5px;
     height: 60px;
     display: flex;
+    width: 100%;
+    max-width: 450px;
+    margin-top: 5px;
 }
 
 .top_track img {
@@ -61,7 +71,6 @@ div.top_artists {
     flex-flow: column;
     justify-content: space-evenly;
     padding-left: 5px;
-    width: 400px;
 }
 
 .play_counter_container {
@@ -105,4 +114,13 @@ a.artist_title {
 
 a.artist_title.hidden {
     display: none;
+}
+
+@media screen and (max-width: 700px) {
+    .top_tracks_and_play_counter_container {
+        flex-flow: column;
+    }
+    .top_tracks_container {
+        margin-bottom: 50px;
+    }
 }
